# FreeImage-1

./: CMakeLists.txt  README.md
FreeImage_19.0.24215.1_install/lib/cmake/FreeImage/: FreeImageTargets-debug.cmake  FreeImageTargets.cmake
FreeImage_extern_app/: CMakeLists.txt
install_FreeImage_Ubun2104/lib/cmake/FreeImage/: FreeImageTargets-debug.cmake  FreeImageTargets.cmake
